--- a/Sample_Points_Prototype/README
+++ b/Sample_Points_Prototype/README
@@ -5,3 +5,6 @@ Description:
 2.Load this file into MySql, following the commands in "load_xml_command.sql".
 3.retrive these data by using PHP,including "config.php" and "output_xml.php" 
 4.Draw these points on Goole Map with "index.html", where I require the results from "output_xml.php".
+
+Note:
+Setup web server first then run “index.html” file.
